--- a/jiuxian_APP/html/wine.html
+++ b/jiuxian_APP/html/wine.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>葡萄酒</title>
-  <link rel="stylesheet" href="css/commonality/reset.css">
-  <link rel="stylesheet" src="css/wangchenyu/base.css">
-  <link rel="stylesheet" href="css/wangchenyu/wine.css">
+  <link rel="stylesheet" href="../css/commonality/reset.css">
+  <link rel="stylesheet" src="../css/wangchenyu/base.css">
+  <link rel="stylesheet" href="../css/wangchenyu/head.css">
+  <link rel="stylesheet" href="../css/wangchenyu/wine.css">
 </head>
 
 <body>
+  <!-- nav bar -->
   <div class="publicHead" id="head">
     <div class="head clearfix">
       <a class="back" href="javascript:void(0)" onclick="backpage();"></a>
