--- a/jiuxian_APP/html/wine.html
+++ b/jiuxian_APP/html/wine.html
@@ -1,19 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Expires" content="0">
+  <meta http-equiv="Cache-Control" content="no-cache">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta name="wap-font-scale" content="no">
   <title>葡萄酒</title>
-  <link rel="stylesheet" href="../css/commonality/reset.css">
-  <link rel="stylesheet" src="../css/wangchenyu/base.css">
-  <link rel="stylesheet" href="../css/wangchenyu/head.css">
-  <link rel="stylesheet" href="../css/wangchenyu/wine.css">
+  <link href="../css/wangchenyu/base.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="../css/wangchenyu/wine.css">
+  <link href="https://m.jiuxian.com/mjava_statics/css/head.css?v1.0" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="https://m.jiuxian.com/mjava_statics/images/favicon.ico"
+    mce_href="https://m.jiuxian.com/mjava_statics/images/favicon.ico" type="image/x-icon">
+  <!--  -->
+  <script src="../js/commonality/jquery-1.12.3.min.js"></script>
+  <script src="../js/wangchenyu/lazyload.js"></script>
+  <script src="../js/commonality/jquery.lazyload.min.js"></script>
 </head>
 
 <body>
-  <!-- nav bar -->
+  <!-- nav -->
   <div class="publicHead" id="head">
     <div class="head clearfix">
       <a class="back" href="javascript:void(0)" onclick="backpage();"></a>
@@ -21,8 +33,7 @@
       <a class="navBar" href="javascript:;"></a>
     </div>
     <ul class="nav">
-      <li class="home"><i></i><span>首页</span><a id="daohang_home" href="https://m.jiuxian.com/?from=topNav"></a>
-      </li>
+      <li class="home"><i></i><span>首页</span><a id="daohang_home" href="https://m.jiuxian.com/?from=topNav"></a></li>
       <li class="topsearch"><i></i><span>搜索</span><a id="daohang_search"
           href="https://m.jiuxian.com/m_v1/search?from=topNav"></a></li>
       <li class="cart"><i></i><span>购物车</span><a id="daohang_gouwuche"
@@ -31,7 +42,7 @@
           href="https://mmember.jiuxian.com/user?from=topNav"></a></li>
     </ul>
   </div>
-  <!-- content -->
+  <!-- 广告栏 -->
   <div class="app-download" id="appdownload">
     <a href="javascript:;" class="close"><i class="close"></i></a> <span class="add-logo"></span>
     <h3>
@@ -42,39 +53,36 @@
     <a class="down-btn" id="openApp" onclick="jxMlinkByUrl()">立即打开</a>
     <input type="hidden" id="shopType" value="2">
   </div>
+  <!-- content -->
   <section class="bhy" id="public">
     <div class="ad clearfix">
       <div class="adImg clearfix">
-        <a class="ad1" href="javascritp:;"><img loazy="no"
-            src="https://img08.jiuxian.com/bill/2018/0817/1986b24a588f4d238fbb28186dcb3114.jpg"></a>
-        <a class="ad2" href="javascritp:;"><img loazy="no"
-            src="https://img07.jiuxian.com/bill/2017/0321/eb4c91b85f9b462cac6262103752e952.jpg"></a>
-        <a class="ad3" href="javascritp:;"><img loazy="no"
-            src="https://img08.jiuxian.com/bill/2017/0215/2ba4508589514badba2d7482a2cd7d5c.jpg"></a>
+        <a class="ad1" href="javascript:;"><img loazy="no" src="../images/wangchenyu/adimg/adimg001.jpg"></a>
+        <a class="ad2" href="javascript:;"><img loazy="no" src="../images/wangchenyu/adimg/adimg002.jpg"></a>
+        <a class="ad3" href="javascript:;"><img loazy="no" src="../images/wangchenyu/adimg/adimg003.jpg"></a>
       </div>
       <ul class="brand clearfix">
-        <li class="first"><a href="javascritp:;">法国</a>
+        <li class="first"><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/9437/0/1/0/sale">法国</a>
         </li>
-        <li><a href="javascritp:;">澳大利亚</a></li>
-        <li><a href="javascritp:;">西班牙</a></li>
-        <li><a href="javascritp:;">智利</a></li>
-        <li class="first"><a href="javascritp:;">拉菲</a>
+        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/9442/0/1/0/sale">澳大利亚</a></li>
+        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/9439/0/1/0/sale">西班牙</a></li>
+        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/9443/0/1/0/sale">智利</a></li>
+        <li class="first"><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/102/0/0/0/0/0/0/0/1/0/sale">拉菲</a>
         </li>
-        <li><a href="javascritp:;">奔富</a></li>
-        <li><a href="javascritp:;">张裕</a></li>
-        <li class="all"><a href="javascritp:;">查看全部</a></li>
+        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/420/0/0/0/0/0/0/0/1/0/sale">奔富</a></li>
+        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/93/0/0/0/0/0/0/0/1/0/sale">张裕</a></li>
+        <li class="all"><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/0/0/1/0/sale">查看全部</a></li>
       </ul>
-
     </div>
-    <!-- <div class="recommend  clearfix">
+    <div class="recommend  clearfix">
       <div class="recTitle">
         <div class="line"></div>
         <div class="title">精品推荐</div>
       </div>
       <div class="recList">
-        <ul class="list clearfix">
+        <ul class="list clearfix" id="toutiao">
           <li class="clearfix"><a class="prodLink" href="https://m.jiuxian.com/m_v1/goods/view/28581"></a> <img
-              class="prodImg" src="http://img10.jiuxian.com/2019/0822/22b4a133986640d28fe9b3857185b8aa4.jpg"
+              class="prodImg" src="../images/wangchenyu/wine/wine001.jpg"
               original="http://img10.jiuxian.com/2019/0822/22b4a133986640d28fe9b3857185b8aa4.jpg">
             <div class="prodInfo">
               <a class="name" href="https://m.jiuxian.com/m_v1/goods/view/28581">【红酒礼盒】澳洲红酒天鹅庄家族经典西拉干红葡萄酒黑色单支礼盒（双支装）</a>
@@ -87,61 +95,31 @@
               </p>
             </div>
           </li>
-          <li class="clearfix"><a class="prodLink" href="https://m.jiuxian.com/m_v1/goods/view/1508"></a> <img
-              class="prodImg" src="http://img08.jiuxian.com/2017/0626/46a5ce68b23440b1b51cbd67efc6651a4.jpg"
-              original="http://img08.jiuxian.com/2017/0626/46a5ce68b23440b1b51cbd67efc6651a4.jpg">
-            <div class="prodInfo">
-              <a class="name" href="https://m.jiuxian.com/m_v1/goods/view/1508">澳大利亚红酒奔富寇兰山赤霞珠西拉红葡萄酒750ml（又名：西拉卡本内）</a>
-              <p class="slogan">橡木桶陈酿 扑鼻而来的圣诞蛋糕及布丁的香气 接着是肉桂与橡木的辛辣气息</p>
-              <p class="price">
-                <strong goodid="1508" class="nowPrice_1508">￥98.00</strong>
-                <em goodidclub="1508" class="clubPrice" style="display:none;">
-                  <font></font><i></i>
-                </em>
-              </p>
-            </div>
-          </li>
-          <li class="clearfix"><a class="prodLink" href="https://m.jiuxian.com/m_v1/goods/view/16615"></a> <img
-              class="prodImg" src="http://img08.jiuxian.com/2016/0118/4b612b9d8bfa4d7c9965857e0075cc574.jpg"
-              original="http://img08.jiuxian.com/2016/0118/4b612b9d8bfa4d7c9965857e0075cc574.jpg">
-            <div class="prodInfo">
-              <a class="name" href="https://m.jiuxian.com/m_v1/goods/view/16615">西班牙红酒西班牙德古斯特干红葡萄酒(双支皮盒套装）750ml*2</a>
-              <p class="slogan">双支皮礼盒 酒具四件套</p>
-              <p class="price">
-                <strong goodid="16615" class="nowPrice_16615">￥129.00</strong>
-                <em goodidclub="16615" class="clubPrice" style="display:none;">
-                  <font></font><i></i>
-                </em>
-              </p>
-            </div>
-          </li>
-          <li class="clearfix"><a class="prodLink" href="https://m.jiuxian.com/m_v1/goods/view/22288"></a> <img
-              class="prodImg" src="http://img07.jiuxian.com/2018/1010/f2c25ce7820f44b6a1bd33e1e8c22e854.jpg"
-              original="http://img07.jiuxian.com/2018/1010/f2c25ce7820f44b6a1bd33e1e8c22e854.jpg"
-              style="display: block;">
-            <div class="prodInfo">
-              <a class="name"
-                href="https://m.jiuxian.com/m_v1/goods/view/22288">澳洲整箱红酒澳大利亚奔富洛神山庄设拉子赤霞珠红葡萄酒750ml（6瓶装）</a>
-              <p class="slogan">奔富洛神混酿款，口感更丰富，热销爆款</p>
-              <p class="price">
-                <strong goodid="22288" class="nowPrice_22288">￥238.00</strong>
-                <em goodidclub="22288" class="clubPrice" style="display:none;">
-                  <font></font><i></i>
-                </em>
-              </p>
-            </div>
-          </li>
         </ul>
       </div>
       <div class="recAll">
-
         <a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/0/0/1/0/sale">查看全部</a>
-
-
       </div>
-    </div> -->
+    </div>
   </section>
+  <input type="hidden" id="type" value="2">
 
 </body>
+<!-- 模板 -->
+<script type="text/template" id="template">
+  <li class="clearfix">
+    <a class="prodLink" href="javascript:;"></a>
+    <img class="prodImg lazy" src="<%=img%>">
+  <div class="prodInfo">
+    <a class="name" href="javascript:;"><%=name%></a>
+    <p class="slogan"><%=slogan%></p>
+    <p class="price">
+      <strong goodid="28581" class="nowPrice_28581"><%=price%></strong>
+    </p>
+  </div>
+</li>
+</script>
+<script src="../js/commonality/underscore-min.js"></script>
+<script src="../js/wangchenyu/upTree.js"></script>
 
 </html>
