数据上树显示

--- a/jiuxian_APP/html/wine.html
+++ b/jiuxian_APP/html/wine.html
@@ -21,7 +21,6 @@
   <!--  -->
   <script src="../js/commonality/jquery-1.12.3.min.js"></script>
   <script src="../js/wangchenyu/lazyload.js"></script>
-  <script src="../js/commonality/jquery.lazyload.min.js"></script>
   <script src="../js/commonality/underscore-min.js"></script>
 </head>
 
@@ -82,20 +81,7 @@
       </div>
       <div class="recList">
         <ul class="list clearfix" id="toutiao">
-          <li class="clearfix"><a class="prodLink" href="https://m.jiuxian.com/m_v1/goods/view/28581"></a> <img
-              class="prodImg" src="../images/wangchenyu/wine/wine001.jpg"
-              original="http://img10.jiuxian.com/2019/0822/22b4a133986640d28fe9b3857185b8aa4.jpg">
-            <div class="prodInfo">
-              <a class="name" href="https://m.jiuxian.com/m_v1/goods/view/28581">【红酒礼盒】澳洲红酒天鹅庄家族经典西拉干红葡萄酒黑色单支礼盒（双支装）</a>
-              <p class="slogan">十几年如一日，精心酿造</p>
-              <p class="price">
-                <strong goodid="28581" class="nowPrice_28581">￥198.00</strong>
-                <em goodidclub="28581" class="clubPrice" style="display:none;">
-                  <font></font><i></i>
-                </em>
-              </p>
-            </div>
-          </li>
+
         </ul>
       </div>
       <div class="recAll">
@@ -111,7 +97,7 @@
 <script type="text/template" id="template">
   <li class="clearfix">
     <a class="prodLink" href="javascript:;"></a>
-    <img class="prodImg lazy" src="<%=pordImg%>">
+    <img class="prodImg lazy" data-original="<%=pordImg%>" >
   <div class="prodInfo">
     <a class="name" href="javascript:;"><%=name%></a>
     <p class="slogan"><%=slogan%></p>
