--- a/jiuxian_APP/html/wine.html
+++ b/jiuxian_APP/html/wine.html
@@ -79,14 +79,15 @@
         <div class="line"></div>
         <div class="title">精品推荐</div>
       </div>
-      <div class="recList">
-        <ul class="list clearfix" id="toutiao">
-
-        </ul>
-      </div>
-      <div class="recAll">
-        <a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/0/0/1/0/sale">查看全部</a>
-      </div>
+      <section id="comsect">
+        <div class="recList">
+          <ul class="list clearfix" id="toutiao">
+          </ul>
+        </div>
+        <div class="recAll">
+          <a href="javascript:;" class="loadall">查看全部</a>
+        </div>
+      </section>
     </div>
   </section>
   <input type="hidden" id="type" value="2">
@@ -108,5 +109,6 @@
 </li>
 </script>
 <script src="../js/wangchenyu/upTree.js"></script>
+<script src="../js/wangchenyu/wine.js"></script>
 
 </html>
