--- a/jiuxian_APP/html/wine.html
+++ b/jiuxian_APP/html/wine.html
@@ -57,21 +57,24 @@
   <section class="bhy" id="public">
     <div class="ad clearfix">
       <div class="adImg clearfix">
-        <a class="ad1" href="javascript:;"><img loazy="no" src="../images/wangchenyu/adimg/adimg001.jpg"></a>
-        <a class="ad2" href="javascript:;"><img loazy="no" src="../images/wangchenyu/adimg/adimg002.jpg"></a>
-        <a class="ad3" href="javascript:;"><img loazy="no" src="../images/wangchenyu/adimg/adimg003.jpg"></a>
+        <a class="ad1" href="javascript:;"><img class="lazy"
+            data-original="../images/wangchenyu/adimg/adimg001.jpg"></a>
+        <a class="ad2" href="javascript:;"><img class="lazy"
+            data-original="../images/wangchenyu/adimg/adimg002.jpg"></a>
+        <a class="ad3" href="javascript:;"><img class="lazy"
+            data-original="../images/wangchenyu/adimg/adimg003.jpg"></a>
       </div>
       <ul class="brand clearfix">
-        <li class="first"><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/9437/0/1/0/sale">法国</a>
+        <li class="first"><a href="javascript:;">法国</a>
         </li>
-        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/9442/0/1/0/sale">澳大利亚</a></li>
-        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/9439/0/1/0/sale">西班牙</a></li>
-        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/9443/0/1/0/sale">智利</a></li>
-        <li class="first"><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/102/0/0/0/0/0/0/0/1/0/sale">拉菲</a>
+        <li><a href="javascript:;">澳大利亚</a></li>
+        <li><a href="javascript:;">西班牙</a></li>
+        <li><a href="javascript:;">智利</a></li>
+        <li class="first"><a href="javascript:;">拉菲</a>
         </li>
-        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/420/0/0/0/0/0/0/0/1/0/sale">奔富</a></li>
-        <li><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/93/0/0/0/0/0/0/0/1/0/sale">张裕</a></li>
-        <li class="all"><a href="https://mlist.jiuxian.com/m_v1/search/filter/2/0/0/0/0/0/0/0/0/1/0/sale">查看全部</a></li>
+        <li><a href="javascript:;">奔富</a></li>
+        <li><a href="javascript:;">张裕</a></li>
+        <li class="all"><a href="javascript:;">查看全部</a></li>
       </ul>
     </div>
     <div class="recommend  clearfix">
@@ -110,5 +113,8 @@
 </script>
 <script src="../js/wangchenyu/upTree.js"></script>
 <script src="../js/wangchenyu/wine.js"></script>
+<script>
+  var wf = new Student(1, 1, 10);
+</script>
 
 </html>
