--- a/jiuxian_APP/html/brandy.html
+++ b/jiuxian_APP/html/brandy.html
@@ -112,10 +112,10 @@
   </div>
 </li>
 </script>
-<script src="../js/wangchenyu/upTree.js"></script>
+<script src="../js/wangchenyu/opTree.js"></script>
 <script src="../js/wangchenyu/wine.js"></script>
 <script>
-    var wf = new Student(1, 1, 10);
+    var wf = new Student(2, 1, 10);
 </script>
 
 </html>
